--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 hwgrid.cls changelog
 
+Version 1.4 - 8 September 2019
+
+- Class options are now passed to the geometry package (allowing users to define custom margins, etc.)
+
+- Days of week are now optional, defaulting to the workweek (Mon - Fri)
+
 Version 1.3 - 3 September 2019
 
 - Use more expl3 syntax
